===================================
TSDuck Change Log and Release Notes
===================================

Version 3.7

- Added plugin rmsplice to remove ads insertions when signaled using SCTE 35
  splice information.

- More details are displayed in SCTE 35 splice information.

- The command tsp --list is now paged, like option --help.

- Bug fix in tstables and plugin tables: with XML output, option --time-stamp
  was ineffective and option --packet-index was always on.

- Bug fix in plugin pcrextract: options --pts and --dts were reversed.

Version 3.6-491

- Added options --synchronous-log and --log-message-count to tsp. They affect
  the way log messages are dropped or displayed in case a vast amount of log
  messages are produced in a short period of time.

- Added option --plp to tsscan and plugin dvb. Used to select the DVB-T2 PLP.
  This option is unsupported on Windows.

- Added options --output-file, --append and --keep to plugin t2mi.

- Added HEVC signalization.

- Added SCTE 35 signalization (splice information for ads insertion).

- Fixed input plugin ip: When multiple multicast streams are sent to the same
  UDP port (although with different addresses), make sure we receive only the
  requested stream. Previously, in some system configurations, the input plugin
  ip could receive packets from distinct multicast streams.

- Various fixes about UDP on macOS (multicast reception, --reuse-port options).

- The help text of all TSDuck applications (using option --help) is now paged
  through "less" or any any other pager application.

- Added the utility tsversion to manage TSDuck versions, detect new versions,
  upgrade, etc.

Version 3.5-414

- Added option --xml-output to tstables and plugin tables. Tables can be saved
  directly in XML format. It is no longer necessary to save in binary and then
  use the decompiler to rebuild XML files.

- With tstables and plugin tables, it is possible to specify several formats