@@ -4,6 +4,8 @@ TSDuck Change Log and Release Notes
 
 Version 3.7
 
+- Added plugin teletext to extract Teletext subtitles in SRT format.
+
 - Added plugin rmsplice to remove ads insertions when signaled using SCTE 35
   splice information.
 
